more site updates

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<img src="imgs/banner.png" alt="NEET Autonomous Machines">
 	<ul class="nav nav-tabs">
 		<li class="active"><a href="#">Home</a></li>
-		<li><a href="#">Projects</a></li>
+		<li><a href="projects.html">Projects</a></li>
 		<li><a href="#">Announcements</a></li>
 		<li><a href="#">People</a></li>
 		<li><a href="#">Sponsors</a></li>
@@ -87,6 +87,7 @@
 </p>
 <div class="jumbotron">
 		<center>
+			<img src = "imgs/sample_2007_robots.jpg" class="jumbotron-image" alt= "Robots built for the 2.007 spring class">
 			<h1>What will I do?</h1>
 			<span class="bottom-arrow"></span>
 		</center>
@@ -103,5 +104,11 @@
 <p>
 	Students are invited to apply for this thread at the end of their first year and beginning of their sophomore year. Keep an eye out for when applications open in the spring! Questions about applications and eligibility can be directed to Greg Long. 
 </p>
+<footer class = "page-footer"> 
+	<div class="container-fluid text-center text-md-left">
+		copyright NEET AM 2020. Questions? Contact us
+	</div>
+</footer>
+
 </body>
 </html>
