upgraded to bootstrap 4, fixed margins

--- a/people.html
+++ b/people.html
@@ -23,7 +23,12 @@
 	</ul>
 	<br>
 	<div>
-		
+		<div>
+			<h2> NEET AM Student Council </h2>
+		</div>
+		<div>
+			<h2> Faculty and Staff </h2>
+		</div>
 	</div>
 </body>
 </html>
