--- a/sponsors.html
+++ b/sponsors.html
@@ -23,7 +23,9 @@
 	</ul>
 	<br>
 	<div>
-		
+		NEET AM thanks its generous sponsors, who have made this program possible.
+
+		Interested in sponsoring NEET? Reach out to <a href="contacts.html"> here </a>
 	</div>
 </body>
 </html>v
