--- a/urop.html
+++ b/urop.html
@@ -23,7 +23,7 @@
 	</ul>
 	<br>
 	<div>
-		
+		NEET can help you secure UROP funding for NEET-related research! Reach out to <a href="contacts.html"> Greg Long</a> for more information. 
 	</div>
 </body>
-</html>v
+</html>
