--- a/index.html
+++ b/index.html
@@ -1,113 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta charset="utf-8">
-	<title>NEET AM</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="main.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <title>NEET AM</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <script src="scripts/jquery.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container-fluid">
-	<img src="imgs/banner.png" alt="NEET Autonomous Machines">
-	<ul class="nav nav-tabs">
-		<li class="active"><a href="#">Home</a></li>
-		<li><a href="projects.html">Projects</a></li>
-		<li><a href="#">Announcements</a></li>
-		<li><a href="#">People</a></li>
-		<li><a href="#">Sponsors</a></li>
-		<li><a href="#">UROP Opportunities</a></li>
-		<li><a href="#">Contact</a></li>
-	</ul>
-	<div id="myCarousel" class="carousel slide" data-ride="carousel">
-	  <!-- Indicators -->
-	  <ol class="carousel-indicators">
-	    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-	    <li data-target="#myCarousel" data-slide-to="1"></li>
-	    <li data-target="#myCarousel" data-slide-to="2"></li>
-	  </ol>
-
-	  <!-- Wrapper for slides -->
-	  <div class="carousel-inner">
-	    <div class="item active">
-	      <img src="imgs/2007_together.jpg"  class = "center-scale" alt="Students from 2s.007 gather around a table during a robotics competition">
-	      <div class="carousel-caption transparent">
-	        <h3>2s.007 Sophomore Project Class</h3>
-	        <p>Students competing in the Fall 2s.007 competition</p>
-	      </div>
-	    </div>
-
-	    <div class="item">
-	      <img src="imgs/junior_seminar.jpg"  class = "center-scale" alt="Students from the NEET AM junior seminar work on an autonomous drone">
-	      <div class="carousel-caption transparent">
-	        <h3>Junior Seminar</h3>
-	        <p>Students working on autonomous drones for the Junior seminar</p>
-	      </div>
-	    </div>
-
-	    <div class="item">
-	      <img src="imgs/6141_car.png" class = "center-scale" alt="An autonomous buggy from the NEET section of 6.141">
-	      <div class="carousel-caption transparent">
-	        <h3>Junior Project Class</h3>
-	        <p>Students participate in a special version of 6.141 that emphasizes machine learning and computer vision</p>
-	      </div>
-	    </div>
-	  </div>
-
-	  <!-- Left and right controls -->
-	  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-	    <span class="glyphicon glyphicon-chevron-left"></span>
-	    <span class="sr-only">Previous</span>
-	  </a>
-	  <a class="right carousel-control" href="#myCarousel" data-slide="next">
-	    <span class="glyphicon glyphicon-chevron-right"></span>
-	    <span class="sr-only">Next</span>
-	  </a>
-	
+<div class="container">
+    <img src="imgs/banner.png" alt="NEET Autonomous Machines">
+    <ul class="nav nav-tabs">
+        <li class="nav-item active"><a href="#">Home</a></li>
+        <li class="nav-item active"><a href="projects.html">Projects</a></li>
+        <li class="nav-item active"><a href="#">Announcements</a></li>
+        <li class="nav-item active"><a href="#">People</a></li>
+        <li class="nav-item active"><a href="#">Sponsors</a></li>
+        <li class="nav-item active"><a href="#">UROP Opportunities</a></li>
+        <li class="nav-item active"><a href="#">Contact</a></li>
+    </ul>
+    
 </div>
+<div class="container">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="imgs/2007_together.jpg"  class = "d-block w-100" alt="Students from 2s.007 gather around a table during a robotics competition">
+          <div class="carousel-caption transparent">
+            <h3>2s.007 Sophomore Project Class</h3>
+            <p>Students competing in the Fall 2s.007 competition</p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="imgs/junior_seminar.jpg"  class = "d-block w-100" alt="Students from the NEET AM junior seminar work on an autonomous drone">
+          <div class="carousel-caption transparent">
+            <h3>Junior Seminar</h3>
+            <p>Students working on autonomous drones for the Junior seminar</p>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img src="imgs/6141_car.PNG" class = "d-block w-100" alt="An autonomous buggy from the NEET section of 6.141">
+          <div class="carousel-caption transparent">
+            <h3>Junior Project Class</h3>
+            <p>Students participate in a special version of 6.141 that emphasizes machine learning and computer vision</p>
+          </div>
+        </div>
+      </div>
+          <!-- Left and right controls -->
+          <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+          </a>
+      </div>
 <div class="jumbotron">
-		<center>
-			<h1>What is NEET?</h1>
-			<span class="bottom-arrow"></span>
-		</center>
+        <center>
+            <h1>What is NEET?</h1>
+            <span class="bottom-arrow"></span>
+        </center>
 </div>
 <p>
-	<a href="https://neet.mit.edu/">The New Engineering Education Transformation (NEET)</a> is an experimental curriculum at MIT designed to be completed alongside student's degree(s). It focuses on hands-on experience to prepare students for industry.
+    <a href="https://neet.mit.edu/">The New Engineering Education Transformation (NEET)</a> is an experimental curriculum at MIT designed to be completed alongside student's degree(s). It focuses on hands-on experience to prepare students for industry.
 </p>
 <p>
-	The Autonomous machines thread is section of NEET devoted to all things autonomous. Students work with drones, cars, and buggies and have special access to professors and labs working in the field. They are required to take a series of classes designed focusing on autonomy. 
+    The Autonomous machines thread is section of NEET devoted to all things autonomous. Students work with drones, cars, and buggies and have special access to professors and labs working in the field. They are required to take a series of classes designed focusing on autonomy. 
 </p>
 <p>
-	Autonomous machines integrate mechanical and informational components by combining the physical constraints of a vehicle with the control, planning, navigation, and perception algorithms required to make them operate independently. The creation of an effective autonomous vehicle requires knowledge of kinematics, dynamics, modeling, control, simulation, design, electronics, sensors, algorithms, software, human-robot interaction, systems engineering, and experimentation.
+    Autonomous machines integrate mechanical and informational components by combining the physical constraints of a vehicle with the control, planning, navigation, and perception algorithms required to make them operate independently. The creation of an effective autonomous vehicle requires knowledge of kinematics, dynamics, modeling, control, simulation, design, electronics, sensors, algorithms, software, human-robot interaction, systems engineering, and experimentation.
 </p>
 <p>
-	Participants in Autonomous Machines will get hands-on experience in all of these disciplines through a series of projects with escalating complexity. Starting with individual projects in small-scale software design for embedded microcontrollers, they then move on to team-level design of perception and planning for automated quadrotors or cars. Finally, the entire class will build a scaled and automated mobility-on-demand system as a semester-long project in the senior year.
-</p>
-<div class="jumbotron">
-		<center>
-			<img src = "imgs/sample_2007_robots.jpg" class="jumbotron-image" alt= "Robots built for the 2.007 spring class">
-			<h1>What will I do?</h1>
-			<span class="bottom-arrow"></span>
-		</center>
-</div>
-<p>
-	Students go through a three year currciculum consisting of fall seminar and spring 12 unit classes, as well as additional reccomended supplementary classes. All of these classes are intended to allow students to hone skills related to autonomy. The seminars are specially designed to familiarize students with the platforms that form the basis of their spring classes. For sophomores and juniors, these classes are variants of existing MIT classes that are being taught with extra support to allow students to focus on advanced autonomy concepts. Seniors complete a large, free form project in a capstone course. More information on past years' classes can be found in the projects section of the site. 
+    Participants in Autonomous Machines will get hands-on experience in all of these disciplines through a series of projects with escalating complexity. Starting with individual projects in small-scale software design for embedded microcontrollers, they then move on to team-level design of perception and planning for automated quadrotors or cars. Finally, the entire class will build a scaled and automated mobility-on-demand system as a semester-long project in the senior year.
 </p>
 <div class="jumbotron">
-		<center>
-			<h1>How do I get involved?</h1>
-			<span class="bottom-arrow"></span>
-		</center>
+        <center>
+            <img src = "imgs/sample_2007_robots.jpg" class="jumbotron-image" alt= "Robots built for the 2.007 spring class">
+            <h1>What will I do?</h1>
+            <span class="bottom-arrow"></span>
+        </center>
 </div>
 <p>
-	Students are invited to apply for this thread at the end of their first year and beginning of their sophomore year. Keep an eye out for when applications open in the spring! Questions about applications and eligibility can be directed to Greg Long. 
+    Students go through a three year currciculum consisting of fall seminar and spring 12 unit classes, as well as additional reccomended supplementary classes. All of these classes are intended to allow students to hone skills related to autonomy. The seminars are specially designed to familiarize students with the platforms that form the basis of their spring classes. For sophomores and juniors, these classes are variants of existing MIT classes that are being taught with extra support to allow students to focus on advanced autonomy concepts. Seniors complete a large, free form project in a capstone course. More information on past years' classes can be found in the projects section of the site. 
 </p>
+<div class="jumbotron">
+        <center>
+            <h1>How do I get involved?</h1>
+            <span class="bottom-arrow"></span>
+        </center>
+</div>
+<p>
+    Students are invited to apply for this thread at the end of their first year and beginning of their sophomore year. Keep an eye out for when applications open in the spring! Questions about applications and eligibility can be directed to Greg Long. 
+</p>
+</div>
 <footer class = "page-footer"> 
-	<div class="container-fluid text-center text-md-left">
-		copyright NEET AM 2020. Questions? Contact us
-	</div>
+    <div class="container-fluid text-center text-md-left">
+        copyright NEET AM 2020. Questions? Contact us
+    </div>
 </footer>
 
 </body>
