--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
 <div class="container">
     <img src="imgs/banner.png" alt="NEET Autonomous Machines">
-    <ul class="nav nav-tabs">
-        <li class="nav-item active"><a href="#">Home</a></li>
-        <li class="nav-item active"><a href="projects.html">Projects</a></li>
-        <li class="nav-item active"><a href="#">Announcements</a></li>
-        <li class="nav-item active"><a href="#">People</a></li>
-        <li class="nav-item active"><a href="#">Sponsors</a></li>
-        <li class="nav-item active"><a href="#">UROP Opportunities</a></li>
-        <li class="nav-item active"><a href="#">Contact</a></li>
+    <ul class="nav">
+        <li class="nav-item"><a class = "nav-link active" href="#">Home</a></li>
+        <li class="nav-item"><a class = "nav-link " href="projects.html">Projects</a></li>
+        <li class="nav-item "><a class = "nav-link "href="announcements.html">Announcements</a></li>
+        <li class="nav-imitem"><a class = "nav-link " href="people.html">People</a></li>
+        <li class="nav-item"><a class = "nav-link " href="sponsors.html">Sponsors</a></li>
+        <li class="nav-item"><a class = "nav-link " href="urop.html">UROP Opportunities</a></li>
+        <li class="nav-item"><a class = "nav-link " href="contact.html">Contact</a></li>
     </ul>
     
 </div>
@@ -35,7 +35,7 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="imgs/2007_together.jpg"  class = "d-block w-100" alt="Students from 2s.007 gather around a table during a robotics competition">
+          <img src="imgs/sophomores/2007_together.jpg"  class = "d-block w-100" alt="Students from 2s.007 gather around a table during a robotics competition">
           <div class="carousel-caption transparent">
             <h3>2s.007 Sophomore Project Class</h3>
             <p>Students competing in the Fall 2s.007 competition</p>
@@ -43,7 +43,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="imgs/junior_seminar.jpg"  class = "d-block w-100" alt="Students from the NEET AM junior seminar work on an autonomous drone">
+          <img src="imgs/juniors/junior_seminar.jpg"  class = "d-block w-100" alt="Students from the NEET AM junior seminar work on an autonomous drone">
           <div class="carousel-caption transparent">
             <h3>Junior Seminar</h3>
             <p>Students working on autonomous drones for the Junior seminar</p>
@@ -51,7 +51,7 @@
         </div>
 
         <div class="carousel-item">
-          <img src="imgs/6141_car.PNG" class = "d-block w-100" alt="An autonomous buggy from the NEET section of 6.141">
+          <img src="imgs/juniors/6141_car.PNG" class = "d-block w-100" alt="An autonomous buggy from the NEET section of 6.141">
           <div class="carousel-caption transparent">
             <h3>Junior Project Class</h3>
             <p>Students participate in a special version of 6.141 that emphasizes machine learning and computer vision</p>
@@ -59,11 +59,11 @@
         </div>
       </div>
           <!-- Left and right controls -->
-          <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
           </a>
-          <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
           </a>
@@ -86,12 +86,11 @@
 <p>
     Participants in Autonomous Machines will get hands-on experience in all of these disciplines through a series of projects with escalating complexity. Starting with individual projects in small-scale software design for embedded microcontrollers, they then move on to team-level design of perception and planning for automated quadrotors or cars. Finally, the entire class will build a scaled and automated mobility-on-demand system as a semester-long project in the senior year.
 </p>
-<div class="jumbotron">
-        <center>
-            <img src = "imgs/sample_2007_robots.jpg" class="jumbotron-image" alt= "Robots built for the 2.007 spring class">
+<div class="jumbotron card card-image" style = "background-image: url(imgs/sophomores/sample_2007_robots.jpg); background-size: cover">
+        <div class="text-white text-center py-5 px-4 transparent">
             <h1>What will I do?</h1>
-            <span class="bottom-arrow"></span>
-        </center>
+            <span class="bottom-arrow-white"></span>
+        </div>
 </div>
 <p>
     Students go through a three year currciculum consisting of fall seminar and spring 12 unit classes, as well as additional reccomended supplementary classes. All of these classes are intended to allow students to hone skills related to autonomy. The seminars are specially designed to familiarize students with the platforms that form the basis of their spring classes. For sophomores and juniors, these classes are variants of existing MIT classes that are being taught with extra support to allow students to focus on advanced autonomy concepts. Seniors complete a large, free form project in a capstone course. More information on past years' classes can be found in the projects section of the site. 
